@@ -1,68 +1,14 @@
 # DigDug Game
 
-# Project Description
-<p> Advanced Programming Final Project <br>
-    Instructors: Dr. Mehdi Esnaashari, Mehdi Zamanian <br>
-    K. N. Toosi University of Technology Spring 1400 <br>
+<p> DigDug game implemented with JavaFx
 </p> 
+
+![DigDug Image](./images/main_map.png)
 
 # Documentation
 https://docs.google.com/document/d/1sRZWx74Wv9uExkHxA1qOGtpuAseKRUzgPfWXWvjbSi0/edit?usp=sharing
 
-# Assests
-You can use these to create graphical components. 
-it can be found in [/src/main/resources/assets](https://git.ce.kntu.ac.ir/ap/homeworks/projects/p4-digdug/-/tree/master/src/main/resources/assets) directory
-
-## Main Map 
-<div align=center> ![main map image](/images/main_map.png) </div>
-
-# Presention Video
-<ul>
-    <li> Present your project in a 10 minutes video. </li>
-    <li> Upload it on a website (aparat, google drive and etc.</li>
-    <li> Edit README.md and add your presentaion link below. (instead of ``YOUR_VIDEO_URL``)</li>
-</ul>
-[Project Description](https://drive.google.com/file/d/1eA5hoA1PuEOBEjn6oe_SXxIOXNPRZlf-/view)
-
-# Images
-take screenshots from the outputs of your program and save it as images or gif into the images
-
-
-# JavaFx 11
-<ul>
-<li>
-clone in your computer: 
-
-```
-git clone <YOUR_REPO_URL>
-cd YOUR_REPO_URL
-```
-
-</li>
-<li>
-    <p>Run Javafx GUI</p>
-    
-```
-mvn clean javafx:run
-```
-
-</li>
-
-<li>
-    <p>Run tests</p>
-    
-```
-mvn clean test
-```
-</li>
-
-<li>
-<p> push your change to the repository: </p>
- 
-```
-git add .
-git commit -m "commit message"
-git push
-```
-</li>
-</ul>
+# Running
+<p>
+Add "--module-path 'path-to-fx-sdk'/javafx-sdk-17/lib/ --add-modules=javafx.controls" to VM options
+</p>
